[package]
name = "log_hal"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
repository = "https://github.com/KarmaNetwork/log_hal"
description = "A log hal for embed system and Iot"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
